--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BIHM Live Stream</title>
-
-  <!-- Open Graph meta tags for Facebook preview -->
   <meta property="og:title" content="Watch BIHM Live Stream" />
   <meta property="og:description" content="Live stream powered by SSH101." />
   <meta property="og:image" content="https://i.imgur.com/lemgLSj.png" />
-  <meta property="og:url" content="https://ragetraxx.github.io/automatic-funicular/" />
+  <meta property="og:url" content="https://bihmtv.vercel.app/" />
   <meta property="og:type" content="video.other" />
-
-  <!-- Optional: Social preview image -->
-  <link rel="image_src" href="https://i.imgur.com/lemgLSj.png" />
 </head>
-<body style="margin:0; padding:0; background:#000; display:flex; align-items:center; justify-content:center; height:100vh;">
-  <video controls autoplay style="width: 90%; max-width: 800px;">
-    <source src="https://ssh101stream.ssh101.com/akamaissh101/ssh101/bihm/playlist.m3u8" type="application/x-mpegURL">
-    Your browser does not support HLS streaming.
-  </video>
+<body style="margin:0; background:#000; display:flex; align-items:center; justify-content:center; height:100vh;">
+  <video id="video" controls autoplay style="width: 90%; max-width: 800px;"></video>
+
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script>
+    const video = document.getElementById('video');
+    const streamUrl = 'https://ssh101stream.ssh101.com/akamaissh101/ssh101/bihm/playlist.m3u8';
+
+    if (Hls.isSupported()) {
+      const hls = new Hls();
+      hls.loadSource(streamUrl);
+      hls.attachMedia(video);
+    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+      video.src = streamUrl;
+    } else {
+      video.outerHTML = '<p style="color: white; text-align: center;">Your browser does not support HLS streaming.</p>';
+    }
+  </script>
 </body>
 </html>
