--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BIHM Live Stream</title>
-  <meta property="og:title" content="Watch BIHM Live Stream" />
+
+  <!-- Open Graph meta tags for Facebook and others -->
+  <meta property="og:title" content="Watch BIHMTV Live Stream" />
   <meta property="og:description" content="Live stream powered by SSH101." />
-  <meta property="og:image" content="https://i.imgur.com/lemgLSj.png" />
+  <meta property="og:image" content="https://i.imgur.com/9Mroe5V.jpeg" />
   <meta property="og:url" content="https://bihmtv.vercel.app/" />
   <meta property="og:type" content="video.other" />
+  <meta property="og:video" content="https://bihmtv.vercel.app/" />
+
+  <!-- Twitter Card (optional) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Watch BIHMTV Live Stream" />
+  <meta name="twitter:description" content="Live stream powered by SSH101." />
+  <meta name="twitter:image" content="https://i.imgur.com/9Mroe5V.jpeg" />
 </head>
 <body style="margin:0; background:#000; display:flex; align-items:center; justify-content:center; height:100vh;">
   <video id="video" controls autoplay style="width: 90%; max-width: 800px;"></video>
